--- a/ToDoApp/index.html
+++ b/ToDoApp/index.html
@@ -12,9 +12,14 @@
         <h1>ToDo List</h1>
         <input id="input-el" type="text">
         <button id="btn"> Add </button>
-        <ul id="ul-el"></ul>
+        <ol id="ul-el"></ol>
     </div>
-    
+    <h3>Instructions!!!</h3>
+    <ul style="list-style: none;">
+        <li>Click once to update</li>
+        <li>Double Click to mark</li>
+        <li>Triple Click to Delete</li>
+    </ul>
     <script src="index.js"></script>
 </body>
 </html>
